--- a/index.html
+++ b/index.html
@@ -14,22 +14,44 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
+  <script src="https://kit.fontawesome.com/7976b266d2.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
+  <header>
+    <img src="images/logo.svg" alt="logo">
+  </header>
   <main>
-    Build The Community Your Fans Will Love
 
-    Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-    Create connections with your users as you engage in genuine discussion. 
+    <section id="col1">
+      <img src="images/illustration-mockups.svg" alt="image of web application mockup">
+    </section>
 
-    Register
+    <section id="col2">
+      <h1>Build The Community<br> Your Fans Will Love</h1>
+
+      <p>
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion. 
+      </p>
+
+      <a href="#">Register</a>
+    </section>
+
+
+    
   </main>
 
   <footer>
+    <div class="social-media">
+      <i class="fab fa-twitter-square"></i>
+      <i class="fab fa-facebook-square"></i>
+      <i class="fab fa-instagram-square"></i>
+    </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Hubert Quarshie</a>.
     </p>
   </footer>
 </body>
