Fixed responsiveness issues relating to the footer

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
   </main>
 
   <footer>
-    <div class="social-media">
-      <i class="fab fa-twitter-square"></i>
-      <i class="fab fa-facebook-square"></i>
-      <i class="fab fa-instagram-square"></i>
+    <div class="social-media-wrapper">
+      <div class="social-media">
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram-square"></i>
+      </div>
     </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
